--- a/pytest.ini
+++ b/pytest.ini
@@ -20,3 +20,4 @@ markers =
     smoke : smoke test as smoke
     parametrize : parametrize test as parametrize
     UI : mark test as UI
+    compatibility : mark test as compatibility
