--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,6 @@ requests~=2.32.3
 selenium~=4.33.0
 python-dotenv~=1.1.0
 Flask-Migrate~=4.1.0
+MarkupSafe~=3.0.2
+PyYAML~=6.0.2
+beautifulsoup4~=4.13.4
